fix(ui5-form-item): fix label-content alignment

--- a/packages/main/src/themes/FormItem.css
+++ b/packages/main/src/themes/FormItem.css
@@ -35,7 +35,7 @@
 .ui5-form-item-layout {
 	display: grid;
 	grid-template-columns: var(--ui5-form-item-layout, 4fr 8fr 0fr);
-	align-items: center;
+	align-items: baseline;
 }
 
 .ui5-form-item-label {
